deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wesplit-front
  labels:
    app: wesplit
    role: front
  namespace: wesplit
spec:
  selector:
    matchLabels:
      app: wesplit
      role: front
  template:
    metadata:
      labels:
        app: wesplit
        role: front
    spec:
      containers:
      - name: wesplit-front
        image: razano/wesplit-front:latest
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wesplit-back
  labels:
    app: wesplit
    role: back
  namespace: wesplit
spec:
  selector:
    matchLabels:
      app: wesplit
      role: back
  template:
    metadata:
      labels:
          app: wesplit
          role: back
    spec:
      containers:
      - name: wesplit-back
        image: razano/wesplit-back:latest
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 3001
