deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wesplit-ingress
  labels:
    name: wesplit-ingress
  namespace: wesplit
spec:
  tls:
  - hosts:
    - wesplit.fr
    - api.wesplit.fr
    secretName: wesplit-tls
  rules:
  - host: wesplit.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wesplit-front
            port: 
              number: 80
  - host: api.wesplit.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wesplit-back
            port: 
              number: 80
